--- a/test.html
+++ b/test.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	<script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
-</head>
-<body>
 
-</body>
-</html>
+<!-- <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="app0.js" type="text/javascript" charset="utf-8" async defer></script> -->
+<script src="callback.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="promise.js" type="text/javascript" charset="utf-8" async defer></script>
