--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 
 <!-- <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="app0.js" type="text/javascript" charset="utf-8" async defer></script> -->
-<script src="callback.js" type="text/javascript" charset="utf-8" async defer></script>
+<!-- <script src="callback.js" type="text/javascript" charset="utf-8" async defer></script> -->
 <script src="promise.js" type="text/javascript" charset="utf-8" async defer></script>
