--- a/test.html
+++ b/test.html
@@ -2,8 +2,10 @@
 <!-- <script src="app.js" type="text/javascript" charset="utf-8" async defer></script>
 
 <script src="app0.js" type="text/javascript" charset="utf-8" async defer></script> -->
-<!-- <script src="callback.js" type="text/javascript" charset="utf-8" async defer></script> -->
+<!-- <script src="callback.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="promise.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="closure.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="object.js" type="text/javascript" charset="utf-8" async defer></script>
-<script src="class.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="class.js" type="text/javascript" charset="utf-8" async defer></script> -->
+<script src="oop1.js" type="text/javascript" charset="utf-8" async defer></script>
+
