--- a/test.html
+++ b/test.html
@@ -6,6 +6,9 @@
 <script src="promise.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="closure.js" type="text/javascript" charset="utf-8" async defer></script>
 <script src="object.js" type="text/javascript" charset="utf-8" async defer></script>
-<script src="class.js" type="text/javascript" charset="utf-8" async defer></script> -->
-<script src="oop1.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="class.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="oop1.js" type="text/javascript" charset="utf-8" async defer></script> -->
+
+<script src="opp2.js" type="text/javascript" charset="utf-8" async defer></script>
+
 
